[package]
name = "soilrust"
version = "0.4.0"
edition = "2024"
authors = ["Numan Burak Fidan"]
license = "MIT OR Apache-2.0"
description = "A geotechnical engineering library for soil mechanics calculations in Rust."
repository = "https://github.com/nubufi/SoilRust"
readme = "README.md"
keywords = ["geotechnical", "soil-mechanics", "rust"]
categories = ["science", "mathematics"]

[dependencies]
# Numerical computation crates
ndarray = "0.16.1"
ordered-float = "5"
serde = {version = "1.0",features = ["derive"]}
[dev-dependencies]
criterion = "0.5.1"  # For benchmarking
approx = "0.5.1"  # For approximate equality in tests

[profile.release]
opt-level = 3
